kotlin-spring-hexagonal: upgrade ktlint dependency